@startuml
'https://plantuml.com/class-diagram

class MinigameManagerImpl {
    +getMinigameScores()
    +updateMinigameScore()
}
class ScoringTableImpl{
    +getScores()
    +updateScore()
}
class ScoringTableManagerImpl{
    +getMinigameScores()
    +updateMinigameScore()
}
class Contoller{
    +getScores()
}
class ScoringTableView
class MinigameSwitcherView

MinigameSwitcherView --* Contoller
ScoringTableView --* Contoller
Contoller --* MinigameManagerImpl
ScoringTableManagerImpl --* ScoringTableImpl
MinigameManagerImpl --* ScoringTableManagerImpl

@enduml